Start IT Web Design Project, phase I after review

--- a/index.html
+++ b/index.html
@@ -42,27 +42,30 @@
     </div>
     <div class="title">Марс</div>
     <div class="p">
+    <div class="fhweri"></div>
+    </div>
+    <div class="mars">
+       <div class="mars-foto">
+           <img src="img/img02.png"/>
+            <img src="img/img03.png"/>
+       </div>
+        <div class="mars-right">
     <p>Марс — планета земного типу з розрідженою атмосферою. На Марсі є
     метеоритні кратери, як на Місяці, вулкани, долини і пустелі, подібні до 
     земних. Тут розташована гора Олімп (22 456 м), найвища відома гора в
     Сонячній системі, і Долини Марінера — величезна рифтоподібна система 
     каньйонів. На додаток до особливостей — період обертання Марса і сезонні 
     цикли також подібні до земних.
+</p>
+       <img src="img/img04.png"/>
+        </div>
 
-Марс — невелика планета, більша за Меркурій, але майже вдвічі менша від Землі за
-діаметром. Марс має екваторіальний радіус 3396 км і середній полярний радіус 
-3379 км (обидва значення точно визначені космічним апаратом
-«Mars Global Surveyor», який почав свою місію на орбіті навколо планети 1999 
-року). Маса Марса становить 6,418×1023 кг, що вдесятеро менше за масу Землі, а 
-прискорення вільного падіння на його поверхні — 3,72 м/с². Це означає, що
-обʼєкти на Марсі важать лише третину своєї земної ваги.</p>
     </div>
-    <img src="img/img02.png"></img>
-    <img src="img/img03.png"></img>
-    <img src="img/img04.png"></img>
+    
+    
     <div class="title">Новий дім?</div>
-    <img src="img/fly.png"></img>
-    <img src="img/img06.png"></img>
+    <img src="img/fly.png"/>
+    <img src="img/img06.png"/>
     <p>Скажіть, а чи замислювались ви колись про те, що можете мати новий дім? 
     Ні, не інший будинок, кімнату, чи квартиру, а іншу планету. Ніколи? Ви мене 
     здивували. Адже людина від природи прагне пізнати незвідане. 
